# tree-sitter-souffle

./: .clang-format  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  benchmark_test.py  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  regression.py  run_integration_tests.sh  setup.py  tox.ini  tree-sitter.json
.github/workflows/: ci.yml
bindings/c/: tree-sitter-souffle.pc.in
bindings/c/tree_sitter/: tree-sitter-souffle.h
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_souffle/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterSouffleTests/: TreeSitterSouffleTests.swift
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: functor.txt  functor_invocation.txt  identifier.txt  number.txt  preprocessor_directive.txt
test/corpus/argument/: aggregator.txt  binary_operation.txt  branch_init.txt  nil.txt  range_expression.txt  unary_operation.txt
test/corpus/comments/: comments.txt
test/corpus/component/: component.txt
test/corpus/directive/: include.txt  input.txt  limitsize.txt  output.txt
test/corpus/pragma/: pragma.txt
test/corpus/preproc/: define.txt  elif.txt  else.txt  if.txt  include.txt
test/corpus/relation_decl/: choice_domain.txt  no_argument.txt  relation_name.txt  relation_qualifier.txt
test/corpus/rule/: negation.txt  subsumption.txt
test/corpus/type_decl/: deprecated.txt  (+6 more)
(+3 files in other folders)
